--- a/src/index.html
+++ b/src/index.html
@@ -221,6 +221,32 @@
     </div>
 </div>
 
+<div class="slider-sellers">
+    <div class="slider-sellers__wrap">
+        <div class="slider-sellers__head">
+            <div class="slider-sellers__head--text">
+                <div class="slider-sellers__head--text-desc">Popular</div>
+                <div class="slider-sellers__head--text-title">Sellers</div>
+            </div>
+            <div class="slider-sellers__head--filter">Today</div>
+        </div>
+        <div class="slider-sellers__body">
+            <div class="slider-sellers__body--cards">
+                <div class="slider-sellers__body--card">
+                    <div class="slider-sellers__body--top">
+                        <div class="slider-sellers__body--top-label">
+                            <div class="slider-sellers__body--top-label-icon"></div>
+                            <div class="slider-sellers__body--top-label-number">#1</div>
+                        </div>
+                        <button class="slider-sellers__body--top-add"></button>
+                        <button class="slider-sellers__body--top-link"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 </body>
