Change alt of card-img

--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
                 </div>
                 <div class="future__3column--card">
                     <div class="future__3column--card-number">6</div>
-                    <img class="future__3column--card-img" src="/src/image/user-violet-56x56.png.png" alt="Picture" />
+                    <img class="future__3column--card-img" src="/src/image/user-violet-56x56.png.png" alt="Photo of Payton" />
                     <div class="future__3column--card-text">
                         <div class="future__3column--card-title">Payton Harris</div>
                         <div class="future__3column--card-price">
