--- a/src/index.html
+++ b/src/index.html
@@ -224,25 +224,141 @@
 <div class="slider-sellers">
     <div class="slider-sellers__wrap">
         <div class="slider-sellers__head">
-            <div class="slider-sellers__head--text">
-                <div class="slider-sellers__head--text-desc">Popular</div>
-                <div class="slider-sellers__head--text-title">Sellers</div>
+            <div class="slider-sellers__head-text">
+                <div class="slider-sellers__head-text-desc">Popular</div>
+                    <div class="slider-sellers__head-text-title-row">
+                        <div class="slider-sellers__head-text-title">Sellers</div>
+                        <button class="slider-sellers__head-text-button"></button>
+                    </div>
             </div>
-            <div class="slider-sellers__head--filter">Today</div>
+            <div class="slider-sellers__head-filter">Today</div>
+            <button class="slider-sellers__head-filter-button button--arrow-bottom" title="Bottom arrow"></button>
         </div>
         <div class="slider-sellers__body">
-            <div class="slider-sellers__body--cards">
-                <div class="slider-sellers__body--card">
-                    <div class="slider-sellers__body--top">
-                        <div class="slider-sellers__body--top-label">
-                            <div class="slider-sellers__body--top-label-icon"></div>
-                            <div class="slider-sellers__body--top-label-number">#1</div>
+            <div class="slider-sellers__cards">
+                <div class="slider-sellers__card">
+                    <div class="slider-sellers__card-top">
+                        <div class="slider-sellers__card-top-label">
+                            <img class="slider-sellers__card-top-label-icon" src="/src/image/Line.svg" alt="Picture" />
+                            <div class="slider-sellers__card-top-label-number">#1</div>
                         </div>
-                        <button class="slider-sellers__body--top-add"></button>
-                        <button class="slider-sellers__body--top-link"></button>
+                        <div class="slider-sellers__card-buttons">
+                        <button class="slider-sellers__card-top-add"></button>
+                        <button class="slider-sellers__card-top-link"></button>
+                        </div>
+                    </div>
+                    <div class="slider-sellers__card-body">
+                       <div class="slider-sellers__card-body-img">
+                            <picture class="slider-sellers__card-body-avatar slider-sellers__card-body-avatar--top">
+                                 <img class="slider-sellers__card-body-avatar-img" src="/src/image/user 64x64.png" alt="Picture" />
+                            </picture>
+                        </div>
+                        <div class="slider-sellers__card-body-name">Edd Harris</div>
+                        <div class="slider-sellers__card-body-price">
+                            <div class="slider-sellers__card-body-price-numbers">2.456</div>
+                            <div class="slider-sellers__card-body-price-value">ETH</div>
+                        </div>
+                    </div>
+                </div>
+                  <div class="slider-sellers__card">
+                    <div class="slider-sellers__card-top">
+                        <div class="slider-sellers__card-top-label">
+                            <img class="slider-sellers__card-top-label-icon" src="/src/image/Line.svg" alt="Picture" />
+                            <div class="slider-sellers__card-top-label-number">#1</div>
+                        </div>
+                        <div class="slider-sellers__card-buttons">
+                        <button class="slider-sellers__card-top-add"></button>
+                        <button class="slider-sellers__card-top-link"></button>
+                        </div>
+                    </div>
+                    <div class="slider-sellers__card-body">
+                      <div class="slider-sellers__card-body-img">
+                            <picture class="slider-sellers__card-body-avatar slider-sellers__card-body-avatar--top">
+                                 <img class="slider-sellers__card-body-avatar-img" src="/src/image/user 64x64.png" alt="Picture" />
+                            </picture>
+                        </div>
+                        <div class="slider-sellers__card-body-name">Edd Harris</div>
+                        <div class="slider-sellers__card-body-price">
+                            <div class="slider-sellers__card-body-price-numbers">2.456</div>
+                            <div class="slider-sellers__card-body-price-value">ETH</div>
+                        </div>
+                    </div>
+                </div>
+                  <div class="slider-sellers__card">
+                    <div class="slider-sellers__card-top">
+                        <div class="slider-sellers__card-top-label">
+                            <img class="slider-sellers__card-top-label-icon" src="/src/image/Line.svg" alt="Picture" />
+                            <div class="slider-sellers__card-top-label-number">#1</div>
+                        </div>
+                        <div class="slider-sellers__card-buttons">
+                        <button class="slider-sellers__card-top-add"></button>
+                        <button class="slider-sellers__card-top-link"></button>
+                        </div>
+                    </div>
+                    <div class="slider-sellers__card-body">
+                       <div class="slider-sellers__card-body-img">
+                            <picture class="slider-sellers__card-body-avatar slider-sellers__card-body-avatar--top">
+                                 <img class="slider-sellers__card-body-avatar-img" src="/src/image/user 64x64.png" alt="Picture" />
+                            </picture>
+                        </div>
+                        <div class="slider-sellers__card-body-name">Edd Harris</div>
+                        <div class="slider-sellers__card-body-price">
+                            <div class="slider-sellers__card-body-price-numbers">2.456</div>
+                            <div class="slider-sellers__card-body-price-value">ETH</div>
+                        </div>
+                    </div>
+                </div>
+                  <div class="slider-sellers__card">
+                    <div class="slider-sellers__card-top">
+                        <div class="slider-sellers__card-top-label">
+                            <img class="slider-sellers__card-top-label-icon" src="/src/image/Line.svg" alt="Picture" />
+                            <div class="slider-sellers__card-top-label-number">#1</div>
+                        </div>
+                        <div class="slider-sellers__card-buttons">
+                        <button class="slider-sellers__card-top-add"></button>
+                        <button class="slider-sellers__card-top-link"></button>
+                        </div>
+                    </div>
+                    <div class="slider-sellers__card-body">
+                      <div class="slider-sellers__card-body-img">
+                            <picture class="slider-sellers__card-body-avatar slider-sellers__card-body-avatar--top">
+                                 <img class="slider-sellers__card-body-avatar-img" src="/src/image/user 64x64.png" alt="Picture" />
+                            </picture>
+                        </div>
+                        <div class="slider-sellers__card-body-name">Edd Harris</div>
+                        <div class="slider-sellers__card-body-price">
+                            <div class="slider-sellers__card-body-price-numbers">2.456</div>
+                            <div class="slider-sellers__card-body-price-value">ETH</div>
+                        </div>
+                    </div>
+                </div>
+                  <div class="slider-sellers__card">
+                    <div class="slider-sellers__card-top">
+                        <div class="slider-sellers__card-top-label">
+                            <img class="slider-sellers__card-top-label-icon" src="/src/image/Line.svg" alt="Picture" />
+                            <div class="slider-sellers__card-top-label-number">#1</div>
+                        </div>
+                        <div class="slider-sellers__card-buttons">
+                        <button class="slider-sellers__card-top-add"></button>
+                        <button class="slider-sellers__card-top-link"></button>
+                        </div>
+                    </div>
+                    <div class="slider-sellers__card-body">
+                        <div class="slider-sellers__card-body-img">
+                            <picture class="slider-sellers__card-body-avatar slider-sellers__card-body-avatar--top">
+                                 <img class="slider-sellers__card-body-avatar-img" src="/src/image/user 64x64.png" alt="Picture" />
+                            </picture>
+                        </div>
+                        <div class="slider-sellers__card-body-name">Edd Harris</div>
+                        <div class="slider-sellers__card-body-price">
+                            <div class="slider-sellers__card-body-price-numbers">2.456</div>
+                            <div class="slider-sellers__card-body-price-value">ETH</div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <button class="slider-sellers__button-right button--arrow-right" title="Right arrow"></button>
+            <button class="slider-sellers__button-left button--arrow-left" title="Left arrow"></button>
         </div>
     </div>
 </div>
