--- a/src/index.html
+++ b/src/index.html
@@ -363,6 +363,26 @@
     </div>
 </div>
 
+<div class="hot-bid">
+    <div class="hot-bid__wrap">
+        <div class="hot-bid__head head-block head-block--slider">
+            <div class="hot-bid__head-title">Hot bid</div>
+            <div class="hot-bid__head-slider">
+                <button class="hot-bid__head-slider-left button--arrow-left" title="Left arrow"></button>
+                <button class="hot-bid__head-slider-right button--arrow-right" title="Right arrow"></button>
+            </div>
+        </div>
+        <div class="hot-bid__body">
+            <div class="hot-bid__body-card card">
+                <div class="hot-bid__body-card-pic card-pic">
+                    <img class="hot-bid__body-card-img card-pic-img" src="/src/image/user 64x64.png" alt="Picture" />
+                </div>
+                <div class="hot-bid__body-card-body"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 </body>
