Move index.html to root

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Poppins:wght@300;400;500;600;700&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.scss">
+    <link rel="stylesheet" href="src/styles/style.scss">
     <link rel="shortcut icon" href="/src/image/1symbol 2.png" type="image/png">
 
 </head>
